--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/plamenkoyovchev/redux-concepts#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6"
   }
